# encore_bigdata2

./: README.md  pyproject.toml
src/encore_bigdata2/: app_8trider.py  app_doxgxxn.py  app_felicette.py  app_jiug.py  stock_and_price.py
tests/: test_app_8trider.py  test_app_doxgxxn.py  test_app_felicette.py  test_app_jiug.py  test_app_tjkpolisher.py  test_stock_and_price.py
