[project]
name = "encore_bigdata2"
version = "0.1.1"
description = ""
authors = [
    {name = "8trider", email = "8trider@naver.com"},
    {name = "jiughan", email = "wldnd4081@gmail.com"},
]
dependencies = []
requires-python = ">=3.8"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[project.urls]
"Homepage" = "https://github.com/DJMLteam2/encore_bigdata2"
"Bug Tracker" = "https://github.com/DJMLteam2/encore_bigdata2/issues"
[tool.pdm.dev-dependencies]
test = [
    "pytest>=7.4.2",
    "pytest-cov>=4.1.0",
]

[project.scripts]
menu = 'encore_bigdata2.app_8trider:menuRecommend'
whosbuy = 'encore_bigdata2.app_8trider:randomMember'
samsung_price = 'encore_bigdata2.app_tjkpolisher:samsung_price'
black_jack = 'encore_bigdata2.app_jiug:play_card_game'
coin_game = 'encore_bigdata2.app_doxgxxn:coin_game'
today_datetime = 'encore_bigdata2.app_felicette:today_felicette'